--- a/index.css
+++ b/index.css
@@ -21,11 +21,12 @@ section {
 
 h1 {
   margin: 0;
-  margin-top: 15px;
+  margin-top: 30px;
   font-size: 120px;
-  width: 300px;
+  width: 370px;
   text-transform: uppercase;
   color: black;
+  text-align: center;
 }
 
 svg {
